# forensic-tool

./: .gitignore  Dockerfile  README.md  compose.yml  entrypoint.sh  pyproject.toml
df-modules/: README.md  pyproject.toml
df-modules/src/df_modules/: __init__.py  analysis.py  ingest.py  report.py  report_data.py
df-server/: pyproject.toml
df-server/src/df_server/: __init__.py  config.py  df_logging.py  dirs.py  main.py  modules.py  routes.py  workspaces.py
df-server/templates/: report.html
example/: example_config.yaml
example/modules/df-example-analysis-model/: pyproject.toml
example/modules/df-example-analysis-model/src/df_example_analysis_module/: __init__.py
example/modules/df-example-ingest-module/: pyproject.toml
example/modules/df-example-ingest-module/src/df_example_ingest_module/: __init__.py
example/modules/df-example-report-model/: pyproject.toml
example/modules/df-example-report-model/src/df_example_report_module/: __init__.py
example/test_data/: workspace.yaml
example/test_data/evidence/: RemoteGPS_00001.csv  RemoteGPS_00002.csv  RemoteGPS_00003.csv  RemoteGPS_00004.csv  RemoteGPS_00005.csv  RemoteGPS_00006.csv
ui/: package.json  pnpm-lock.yaml
ui/app/: interfaces.ts  root.tsx
ui/app/routes/: _index.tsx  modules.tsx  workspaces.$workspace.evidence.tsx  workspaces.$workspace.render.tsx  workspaces.$workspace.tsx  workspaces.tsx
