[project]
name = "df-example-ingest-module"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "df_modules"
]
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/df_example_ingest_module"]
