[project]
name = "df-example-report-module"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "df_modules",
    "htmlmin>=0.1.12",
]
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/df_example_report_module"]
